<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.artactivo.fivephobias.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_0"
                style="@style/Image"
                android:src="@drawable/currency" />

            <TextView
                android:id="@+id/title_0"
                style="@style/Title"
                android:onClick="showPhobia"
                android:tag="0"
                android:text="@string/phobia_0" />

            <TextView
                android:id="@+id/content_0"
                style="@style/Content"
                android:onClick="showPhobia"
                android:tag="0"
                android:visibility="gone"
                android:layout_below="@+id/image_0"
                android:text="@string/content_text_0" />

        </RelativeLayout>

        <RelativeLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_1"
                style="@style/Image"
                android:src="@drawable/teens" />

            <TextView
                android:id="@+id/title_1"
                style="@style/Title"
                android:onClick="showPhobia"
                android:tag="1"
                android:text="@string/phobia_1" />

            <TextView
                android:id="@+id/content_1"
                style="@style/Content"
                android:onClick="showPhobia"
                android:tag="1"
                android:visibility="gone"
                android:layout_below="@+id/image_1"
                android:text="@string/content_text_1" />

        </RelativeLayout>

        <RelativeLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_2"
                style="@style/Image"
                android:src="@drawable/words" />

            <TextView
                android:id="@+id/title_2"
                style="@style/Title"
                android:onClick="showPhobia"
                android:tag="2"
                android:text="@string/phobia_2" />

            <TextView
                android:id="@+id/content_2"
                style="@style/Content"
                android:onClick="showPhobia"
                android:tag="2"
                android:visibility="gone"
                android:layout_below="@+id/image_2"
                android:text="@string/content_text_2" />

        </RelativeLayout>

        <RelativeLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_3"
                style="@style/Image"
                android:src="@drawable/eyes" />

            <TextView
                android:id="@+id/title_3"
                style="@style/Title"
                android:onClick="showPhobia"
                android:tag="3"
                android:text="@string/phobia_3" />

            <TextView
                android:id="@+id/content_3"
                style="@style/Content"
                android:onClick="showPhobia"
                android:tag="3"
                android:visibility="gone"
                android:layout_below="@+id/image_3"
                android:text="@string/content_text_3" />

        </RelativeLayout>

        <RelativeLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_4"
                style="@style/Image"
                android:src="@drawable/knowledge" />

            <TextView
                android:id="@+id/title_4"
                style="@style/Title"
                android:onClick="showPhobia"
                android:tag="4"
                android:text="@string/phobia_4" />

            <TextView
                android:id="@+id/content_4"
                style="@style/Content"
                android:onClick="showPhobia"
                android:tag="4"
                android:visibility="gone"
                android:layout_below="@+id/image_4"
                android:text="@string/content_text_4" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
